@@ -65,14 +65,14 @@ public class AllChecksTest extends AbstractModuleTestSupport {
     private static final Locale[] ALL_LOCALES = {
         Locale.CHINESE,
         Locale.ENGLISH,
-        new Locale("es"),
-        new Locale("fi"),
+        Locale.of("es"),
+        Locale.of("fi"),
         Locale.FRENCH,
         Locale.GERMAN,
         Locale.JAPANESE,
-        new Locale("pt"),
-        new Locale("ru"),
-        new Locale("tr"),
+        Locale.of("pt"),
+        Locale.of("ru"),
+        Locale.of("tr"),
     };
 
     private static final Map<String, Set<String>> CHECKSTYLE_TOKENS_IN_CONFIG_TO_IGNORE =
